--- a/locales/es.json
+++ b/locales/es.json
@@ -59,6 +59,6 @@
     "description": "Siempre estoy abierto a discutir nuevas oportunidades, proyectos de seguridad o simplemente intercambiar ideas sobre Threat Hunting y Detection Engineering."
   },
   "footer": {
-    "built_with": "Desarrollado con"
+    "built_by": "Desarrollado por"
   }
 }
