--- a/locales/pt-br.json
+++ b/locales/pt-br.json
@@ -59,6 +59,6 @@
     "description": "Estou sempre aberto a discutir novas oportunidades, projetos de seguranca ou simplesmente trocar ideias sobre Threat Hunting e Detection Engineering."
   },
   "footer": {
-    "built_with": "Desenvolvido com"
+    "built_by": "Desenvolvido por"
   }
 }
