--- a/locales/zh.json
+++ b/locales/zh.json
@@ -59,6 +59,6 @@
     "description": "我随时欢迎讨论新机会、安全项目，或简单地交流关于威胁狩猎和检测工程的想法。"
   },
   "footer": {
-    "built_with": "使用"
+    "built_by": "开发者"
   }
 }
